# osrs

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  Taskfile.yml  discord_webhook.py  lambda_function.py  main.tf  pyproject.toml  webhook.py
.github/workflows/: cicd.yml
core/api/: hiscores.py
core/api/aws/: s3.py
core/api/osrs/: hiscores.py
core/dataclasses/: character.py  skills.py
core/scraper/: runescape.py
core/scrapers/: character_stats.py
core/storage/: json.py  protocol.py
core/storage/aws/: s3.py
core/utils/: collect_character_stats.py  dict.py  osrs.py  randomize.py
src/api/aws/: s3.py
src/api/osrs/: hiscores.py
src/runescape/api/: utils.py
src/runescape/api/aws/: s3.py
src/runescape/api/osrs/: __init__.py  catalogue.py  client.py  grand_exchange.py  hiscores.py  hiscores_json.py  items.py  models.py
src/runescape/dataclasses/: categories.py  character.py  items.py  player.py
src/runescape/discord/: bot.py  webhook.py
src/runescape/storage/: json.py  protocol.py
src/runescape/storage/aws/: errors.py  s3.py
src/runescape/utils/: dict.py  osrs.py
src/runescape/webhooks/: discord.py
src/storage/: json.py
src/storage/aws/: s3.py
src/utils/: osrs.py
src/webhooks/: discord.py  discord_webhook.py
taskfiles/: infra.yml  test.yml
terraform/: main.tf
terraform/discord_hook/: main.tf
terraform/discord_webhook/: lambda_function.py  main.tf  variables.tf
tests/: conftest.py
tests/core/: conftest.py
tests/core/api/: test_hiscores.py
tests/core/api/aws/: test_s3.py
tests/core/api/osrs/: test_hiscores.py
tests/core/scraper/: test_runescape.py
tests/core/scrapers/: test_character_stats.py
tests/core/utils/: test_dict.py  test_osrs.py
tests/data/: Zehahandsome.json
tests/src/api/aws/: test_s3.py
tests/src/api/osrs/: test_catalogue.py  test_grand_exchange.py  test_hiscores.py
tests/src/api/osrs/client/: test_get_hiscore.py  test_grand_exchange.py
tests/src/storage/: test_json.py
tests/src/storage/aws/: test_s3_storage.py
tests/src/utils/: test_dict.py  test_osrs.py
tests/src/webhooks/: test_discord.py
tests/storage/aws/: test_s3_storage.py
