[tool.poetry]
name = "osrs"
version = "0.1.0"
description = ""
authors = ["Steven <stevencheung7@outlook.dk>"]
readme = "README.md"
packages = [{ include = "runescape", from = "src" }]

[tool.poetry.scripts]
discord_webhook = "src.webhooks.discord:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.2"
beautifulsoup4 = "^4.12.2"
discord = "^2.3.2"
python-dotenv = "^1.0.0"
boto3 = "^1.35.68"
awscli = "^1.36.40"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.4"
pre-commit = "^4.1.0"
types-boto3 = "^1.36.16"
coverage = "^7.6.10"
pytest-coverage = "^0.0"


[tool.poetry.group.extra.dependencies]
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts =  "-m 'not aws'"
markers = [
    "aws: Mark tests that connect to AWS. Select with '-m aws'"
]
