[project]
name = "osrs"
version = "0.2.0"
description = ""
authors = [{ name = "Steven", email = "stevencheung7@outlook.dk" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "requests>=2.32.5,<3",
    "beautifulsoup4>=4.13.5,<5",
    "discord>=2.3.2,<3",
    "boto3>=1.35.68,<2",
    "awscli>=1.36.40,<2",
    "python-dotenv>=1.2.1",
    "py-cord>=2.6.1",
    "loguru>=0.7.3",
]

[project.scripts]
discord_webhook = "runescape.discord.webhook:main"
discord_bot = "runescape.discord.bot:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2,<10",
    "ruff>=0.14.0,<0.15",
    "pre-commit>=4.3.0,<5",
    "types-boto3>=1.40.30,<2",
    "coverage>=7.8.2,<8",
    "pytest-coverage>=0.0,<0.1",
]
extra = ["ipython>=8.37.0,<9"]

[tool.uv]
default-groups = [
    "dev",
    "extra",
]

[tool.hatch.build.targets.sdist]
include = ["src/runescape"]

[tool.hatch.build.targets.wheel]
include = ["src/runescape"]

[tool.hatch.build.targets.wheel.sources]
"src/runescape" = "runescape"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
addopts =  "-m 'not aws'"
markers = [
    "aws: Mark tests that connect to AWS. Select with '-m aws'"
]

[tool.ruff]
exclude = [
    "/tests",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 90

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
